--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3289,6 +3289,13 @@
 						font-size: 0.8em;
 					}
 
+					#header img {
+						height: 38px !important; 
+						max-width: 38px !important; 
+						margin-left: 3px !important; 
+						margin-top: 3px !important;
+					}
+
 				}
 
 		#header nav {
@@ -3659,7 +3666,7 @@
 		@media screen and (max-width: 1680px) {
 
 			#main > header {
-				padding: 10em 0 8em 0 ;
+				padding: 6em 3em 6em 3em ;
 			}
 
 		}
@@ -3667,7 +3674,7 @@
 		@media screen and (max-width: 1280px) {
 
 			#main > header {
-				padding: 8em 3em 6em 3em ;
+				padding: 6em 3em 6em 3em ;
 			}
 
 		}
@@ -3675,7 +3682,7 @@
 		@media screen and (max-width: 980px) {
 
 			#main > header {
-				padding: 10em 3em 8em 3em ;
+				padding: 6em 3em 6em 3em ;
 			}
 
 		}
@@ -3719,7 +3726,7 @@
 
 		#footer .copyright {
 			color: rgba(255, 255, 255, 0.5);
-			font-size: 0.8em;
+			font-size: 0.5em;
 			letter-spacing: 0.225em;
 			list-style: none;
 			padding: 0;
